<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@android:color/white">

    <!-- Back Button -->
    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:contentDescription="@string/back"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:layout_alignParentStart="true"
        android:layout_marginTop="16dp"
        android:src="@android:drawable/ic_menu_revert" />

    <!-- Profile Image -->
    <ImageView
        android:id="@+id/profileImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="48dp"
        android:scaleType="centerCrop"
        android:background="@android:color/transparent"
        android:contentDescription="@string/profile_image" />

    <LinearLayout
        android:id="@+id/imageButtonContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/profileImageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:orientation="horizontal">

        <!-- Upload Image Button -->
        <ImageButton
            android:id="@+id/uploadImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/upload_image"
            android:src="@android:drawable/ic_menu_camera" />

        <!-- Reset Image Button -->
        <ImageButton
            android:id="@+id/resetImageButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="8dp"
            android:background="?android:attr/selectableItemBackgroundBorderless"
            android:src="@android:drawable/ic_menu_close_clear_cancel" />
    </LinearLayout>

    <!-- Name Edit Text -->
    <EditText
        android:id="@+id/editName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:autofillHints="name"
        android:padding="12dp"
        android:layout_below="@id/imageButtonContainer"
        android:layout_marginTop="16dp" />

    <!-- Email Edit Text -->
    <EditText
        android:id="@+id/editEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:autofillHints="emailAddress"
        android:padding="12dp"
        android:layout_below="@id/editName"
        android:layout_marginTop="8dp" />

    <!-- Phone Edit Text -->
    <EditText
        android:id="@+id/editPhone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/phone"
        android:inputType="phone"
        android:autofillHints="phone"
        android:padding="12dp"
        android:layout_below="@id/editEmail"
        android:layout_marginTop="8dp" />

    <!-- Facility Edit Text -->

    <!-- Save Button -->
    <Button
        android:id="@+id/saveButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:textColor="@android:color/white"
        android:backgroundTint="@android:color/black"
        android:layout_below="@id/editPhone"
        android:layout_marginTop="30dp" />

    <!-- Add this switch to your layout -->
    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Receive Notifications"
        android:checked="true"/>

</RelativeLayout>
